--- a/dhuddu/src/index.css
+++ b/dhuddu/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+header {
+  padding: 15px;
+  text-align: left;
+  background: #1abc9c;
+  color: white;
+  font-size: 12px;
+  top: 0;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+footer {
+  padding: 0.2px;
+  text-align: left;
+  background: #1abc9c;
+  color: white;
+  font-size: 15px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;  
+}
+
+ul {
+  width: 100%;
+  list-style: none;
+  padding: 0.25rem 0.25rem;  
+}
+
+ul li::before{
+  content: "\200B";
+}
+
+.item {
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.5rem 0 0.5rem 0.5rem;
+  margin: 0.25rem 0;
+  background-color: #eee;
+}
+
+.item:first-child {
+  margin: 0;
+}
+
+.item input[type="checkbox"]:focus + label{
+  text-decoration: underline;
+  size: 60px;
+}
+
+.item > label{
+  font-size: 0.75rem;
+  flex-grow: 1;
+  font-size: large;
+}
+
+.item svg{
+  width: 48px;
+  min-width: 48px;
+  height: 36px;
+  font-size: 1rem;
+  color: #1abc9c;
+  cursor: pointer;
+}
+
+.item svg:focus,
+.item svg:hover{
+  color: red;
+  outline: none;
 }
